[Refactor] update for 7.71 gestion de proyectos met system ii

--- a/4º Año/Metodologia de Sistemas II/Unidad 7/1. Gestion de Proyectos.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 7/1. Gestion de Proyectos.md
@@ -1,95 +1,118 @@
-## Introducción
-### Percepción y Realidad
-Los seres humanos usamos la percepción como primer paso para crear la realidad personal. La percepción nos permite procesar estímulos externos e internos. Según Immanuel Kant: "No vemos las cosas tal como son, vemos las cosas tal como somos".
+### Introducción
 
-### Abstracción en Proyectos de Software
-En el desarrollo de proyectos de software, realizamos una abstracción de nuestra percepción del mundo real. En esta abstracción intervienen nuestros sentidos, conocimiento, experiencia, usuarios y otros miembros del equipo de proyecto.
+Los seres humanos usamos la percepción como primer paso para crear la realidad personal, siendo la percepción una de las funciones del cerebro que nos permite procesar los estímulos que nos llegan desde el exterior, recogidos a través de los cinco sentidos, y también los que nos llegan desde nuestro propio interior.
 
-### Torre de Babel: Un Caso de Estudio
-#### Aspectos Positivos
-1. Claridad de la misión.
-2. Mano de obra abundante.
-3. Materiales disponibles localmente.
-4. Sin restricciones de tiempo.
-5. Tecnología adecuada.
+Cuando vamos a desarrollar proyectos de software lo que hacemos es realizar una abstracción de esa percepción que tenemos del mundo real. Para realizar esa abstracción, además de nuestros sentidos, nuestro conocimiento y nuestra experiencia intervendrán los usuarios y otros componentes del equipo de proyecto.
 
-#### Problemas
-1. Comunicación.
-2. Organización.
+#### Torre de Babel
+##### ¿Qué anduvo bien?
+1. Claridad de la misión: sin duda; el proyecto falló antes de establecerse que era imposible.
+2. Mano de obra: disponían de una cantidad enorme.
+3. Materiales: los necesarios estaban en la zona (Mesopotamia).
+4. Tiempo: no había restricción alguna de tiempo.
+5. Tecnología: era la adecuada para construir una torre estable (pirámide o cono), el proyecto fracasó antes que se alcanzaran limitaciones tecnológicas.
 
-### Criterios de Éxito en Gestión de Proyectos
+##### ¿Qué fracasó?
+- Comunicación y en consecuencia.
+- Organización.
+
 Los criterios de éxito para la gestión del proyecto varían de un proyecto a otro, pero, para la mayoría de los proyectos, las metas importantes son:
-1. Entregar el software a tiempo.
-2. Mantener los costos dentro del presupuesto.
-3. Cumplir con las expectativas del cliente.
-4. Mantener un equipo de desarrollo eficiente.
 
-### Particularidades de la Gestión de Software
-1. **Intangibilidad del producto**: No se puede ver ni tocar.
-2. **Proyectos excepcionales**: Los proyectos grandes de software son únicos y las lecciones anteriores pueden no ser aplicables.
-3. **Variabilidad de procesos**: Los procesos de software varían entre organizaciones.
+1. Entregar el software al cliente en el tiempo acordado.
+2. Mantener costos dentro del presupuesto general.
+3. Entregar software que cumpla con las expectativas del cliente.
+4. Mantener un equipo de desarrollo óptimo y con buen funcionamiento.
 
-### Responsabilidades del Gerente de Proyecto
-La labor de un Project Manager/Gerente del proyecto de software varía de una organización a otra dependiendo de la función de la organización y del producto a desarrollar. A pesar de lo anterior los gerentes tienen responsabilidades de las siguientes actividades:
-1. **Planeación del proyecto**: Estimación, calendarización y asignación de tareas.
-2. **Supervisión del trabajo**: Verificar estándares y monitorear el avance.
-3. **Informes**: Reportar el avance a clientes y administradores.
-4. **Gestión del riesgo**: Valorar, monitorizar y actuar sobre riesgos.
-5. **Gestión de personal**: Administrar el equipo, elegir miembros y establecer métodos de trabajo.
-6. **Redactar propuestas**: Describir objetivos, estimaciones de costo y justificación para obtener contratos.
+#### En la gestión de software existen algunas diferencias:
 
-### Project Management Office (PMO)
-La PMO es una unidad organizacional que provee servicios de soporte a los proyectos y es responsable por proyectos específicos. Sus funciones incluyen:
-- Recursos compartidos.
-- Metodología de dirección de proyectos.
-- Documentación y configuración centralizada.
-- Gestión de riesgos y herramientas.
-- Comunicación entre proyectos.
+El producto es intangible. No se puede ver ni tocar. Los administradores de proyectos de software no pueden constatar el progreso con sólo observar el artefacto que se construye. Más bien, ellos se apoyan en otros para crear la prueba que pueden utilizar al revisar el progreso del trabajo.
 
-## Gestión del Riesgo
-### Categorías de Riesgos
-1. **Riesgos del proyecto**: Alteran el calendario o los recursos.
-2. **Riesgos del producto**: Afectan la calidad o el rendimiento.
-3. **Riesgos empresariales**: Afectan a la organización.
+Los grandes proyectos de software con frecuencia son proyectos excepcionales. Los grandes proyectos de software se consideran en general diferentes en ciertas formas de los proyectos anteriores.
 
-### Proceso de Gestión del Riesgo
-1. **Identificación del riesgo**: Posibles riesgos para el proyecto, producto y empresa.
-2. **Análisis de riesgos**: Valorar probabilidad y consecuencias.
-3. **Planeación del riesgo**: Elaborar planes para enfrentar, evitar o minimizar el riesgo.
-4. **Monitorización del riesgo**: Valorar regularmente los riesgos y planes.
+Los cambios tecnológicos en computadoras y comunicaciones pueden volver obsoleta la experiencia de un administrador. Las lecciones aprendidas de proyectos anteriores pueden no ser aplicables a nuevos proyectos.
 
-### Tipos de Riesgos
-1. **Tecnológicos**: Derivados de tecnologías usadas.
-2. **Personales**: Asociados con el equipo de desarrollo.
-3. **Organizacionales**: Derivados del entorno organizacional.
-4. **De herramientas**: Resultantes de las herramientas de software.
-5. **De requerimientos**: Procedentes de cambios a los requerimientos del cliente.
-6. **De estimación**: Surgen de las estimaciones de recursos.
+Los procesos de software son variables y específicos de la organización. Los procesos de software varían de una organización a otra. Aunque se ha producido un notorio avance en la estandarización y el mejoramiento de los procesos, no es posible predecir de manera confiable cuándo un proceso de software particular conducirá a problemas de desarrollo.
 
-### Ejemplos de Riesgos Comunes
-1. **Rotación de personal**: Personal experimentado abandona el proyecto.
-2. **Cambio administrativo**: Cambio de gestión en la organización.
-3. **Indisponibilidad de hardware**: Hardware esencial no se entrega a tiempo.
-4. **Bajo rendimiento de herramientas CASE**: Las herramientas no se desempeñan como se esperaba.
-5. **Competencia de productos**: Un producto competitivo se lanza antes de completar el sistema.
+La labor de un Project Manager/Gerente del proyecto de software varía de una organización a otra dependiendo de la función de la organización y del producto a desarrollar.
 
-### Estrategias de Gestión del Riesgo
-1. **Evitación**: Reducir la probabilidad del riesgo.
-2. **Minimización**: Reducir el efecto del riesgo.
-3. **Planes de contingencia**: Prepararse para lo peor y tener una estrategia para enfrentarlo.
+A pesar de lo anterior los gerentes tienen responsabilidades de las siguientes actividades:
 
-## Gestión de Personal y Trabajo en Equipo
-### Selección y Administración del Equipo
-Los administradores de proyecto deben elegir a los integrantes de sus equipos y establecer formas de trabajo que conduzcan a un desempeño efectivo del equipo.
+##### Planeación del proyecto
+- Estimación y calendarización del desarrollo del proyecto.
+- Asignación de tareas a las personas.
+- Supervisión del trabajo verificando los estándares requeridos y monitoreando el avance para comprobar que el desarrollo esté a tiempo y dentro del presupuesto.
 
-### Comunicación y Coordinación
-La comunicación y coordinación efectiva dentro del equipo es crucial para el éxito del proyecto. Esto incluye mantener a todos informados sobre el progreso y los cambios del proyecto.
+##### Informes
+- Informar el avance del proyecto a los clientes y administradores de la compañía que desarrolla el software.
+- Deben redactar documentos concisos y coherentes que sinteticen información crítica de reportes detallados del proyecto. Es necesario que esta información se presente durante las revisiones de avance.
 
-### Propuesta y Documentación
-Los administradores de proyecto deben redactar propuestas y documentos concisos que sinteticen información crítica y justifiquen por qué el contrato del proyecto debería concederse a su equipo.
+##### Gestión del riesgo
+Los administradores de proyecto tienen que valorar los riesgos que pueden afectar un proyecto, monitorizar dichos riesgos y emprender acciones cuando surjan problemas.
 
-### PMO: Project Management Office
-La PMO centraliza y coordina los proyectos, asegurando que se comparten recursos, metodologías y documentación entre todos los proyectos. También gestiona la configuración, riesgos y herramientas de los proyectos.
+##### Gestión de personal
+Los administradores de proyecto son responsables de administrar un equipo de personas. Deben elegir a los integrantes de sus equipos y establecer formas de trabajar que conduzcan a desempeño efectivo del equipo.
 
-## Conclusión
-La gestión de proyectos de software implica múltiples responsabilidades y requiere habilidades en planeación, supervisión, gestión de riesgos y administración de equipos. La PMO juega un papel crucial en la coordinación y soporte de los proyectos, asegurando que se cumplan los objetivos y se minimicen los riesgos.
+##### Redactar propuestas
+La primera etapa en un proyecto de software puede implicar escribir una propuesta para obtener un contrato de trabajo. La propuesta describe los objetivos del proyecto y cómo se realizará, estimaciones de costo y calendarización, además de justificar por qué el contrato del proyecto debería concederse a una organización o un equipo particular.
+
+#### PMO: Project Management Office
+Es una unidad organizacional que provee servicios de soporte a los proyectos y es responsable por proyectos específicos. Centraliza y coordina los proyectos.
+
+##### Alcance de sus funciones:
+- Recursos compartidos entre todos los proyectos.
+- Metodología de dirección de proyectos, mejores prácticas y normas.
+- Documentación compartida por los proyectos: políticas, procedimientos y templates.
+- Configuración centralizada.
+- Riesgos compartidos para todos los proyectos.
+- Operación y gestión de herramientas de los proyectos.
+- Gestión de las comunicaciones entre proyectos.
+
+### ¿Qué es un proyecto?
+Un proyecto es una actividad temporaria destinada a crear un producto o servicio único. 
+
+Temporaria: cada proyecto tiene un comienzo y fin definidos, aunque ello no se aplique al resultado del proyecto. Al final del proyecto hay algo (un producto o un servicio) y ello requiere concurrencia de la finalización.
+
+Único: el producto o servicio difiere en algo de todos los productos o servicios similares.
+
+### Project Management (PM)
+Es la aplicación de conocimiento, habilidades, herramientas y técnicas a las actividades de proyecto para satisfacer o exceder las necesidades y expectativas de los stakeholders de un proyecto.
+
+#### Stakeholders
+Individuo u organización que está involucrado o interesado o puede ser afectado por las actividades del proyecto.
+
+Stakeholders clave:
+- Gerente de proyecto.
+- Cliente/usuario.
+- Organización ejecutora.
+- Miembros del equipo del proyecto.
+- Patrocinador.
+- Oficina de Gestión de Proyectos (PMO).
+
+Categorías:
+- Internos/externos.
+- Propietarios y financiadores.
+- Proveedores y contratistas.
+- Miembros del equipo.
+- Agencias del gobierno.
+- Ciudadanos individuales.
+
+Relaciones con el proyecto:
+- De uso.
+- Económica.
+- Contractual.
+- Legal/jurídica.
+
+### Restricciones principales de un proyecto
+Sobre un proyecto actúan cinco restricciones principales:
+
+- Alcance. Define los bordes del proyecto, establece qué se debe hacer y qué no se debe hacer. Hay que diferenciar el alcance del proyecto, que son las actividades y los productos que se generan en el proyecto, del alcance del producto que habitualmente se formula como una especificación funcional.
+- Calidad. Calidad del proceso y calidad del producto.
+- Costo. Se piensa en términos del presupuesto establecido para el proyecto, es una consideración fundamental del ciclo de vida de gestión de proyectos. En el contexto, el costo se relaciona con los beneficios pero ese análisis está fuera del alcance de la gestión de proyectos.
+- Tiempo. El tiempo requerido resulta de la concurrencia de varias variables: el cliente fija un plazo. Como recurso, el tiempo no se puede inventariar y no es renovable, el gerente de proyecto tiene como misión usar el tiempo futuro en la forma más eficiente posible para el proyecto.
+- Recursos. Son activos, en una visión amplia, no meramente contable, que incluye gente, software, facilidades, etc. Claramente en nuestro interés, los RRHH son el principal recurso.
+
+#### Tiempo, costo, recursos
+- La gestión del proyecto se ejecuta dentro del triángulo.
+- Con las restricciones de costos, tiempo y recursos debe alcanzarse la funcionalidad y calidad requerida para el producto.
+- El Project Manager debe tomar decisiones que son opciones entre sus bordes (T+C+R).
+- La meta principal es funcionalidad y calidad en el tiempo, costo y con los recursos asignados.
