[Refactor] update 7.1 met system 7.1

--- a/4º Año/Metodologia de Sistemas II/Unidad 7/1. Gestion de Proyectos.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 7/1. Gestion de Proyectos.md
@@ -116,3 +116,86 @@ Sobre un proyecto actúan cinco restricciones principales:
 - Con las restricciones de costos, tiempo y recursos debe alcanzarse la funcionalidad y calidad requerida para el producto.
 - El Project Manager debe tomar decisiones que son opciones entre sus bordes (T+C+R).
 - La meta principal es funcionalidad y calidad en el tiempo, costo y con los recursos asignados.
+
+## Gestión del Riesgo
+La gestión del riesgo implica anticipar riesgos que pudieran alterar el calendario del proyecto o la calidad del software a entregar, y posteriormente tomar acciones para evitar dichos riesgos.
+
+### Categorías de Riesgos
+1. **Riesgos del Proyecto**: Los riesgos que alteran el calendario o los recursos del proyecto. Por ejemplo, la renuncia de un diseñador experimentado puede retrasar el diseño del software.
+2. **Riesgos del Producto**: Los riesgos que afectan la calidad o el rendimiento del software. Un ejemplo es la falla de un componente adquirido que no funciona como se esperaba.
+3. **Riesgos Empresariales**: Riesgos que afectan a la organización que desarrolla o adquiere el software. Por ejemplo, la introducción de un nuevo producto por un competidor puede afectar las ventas esperadas.
+
+### Registro y Análisis de Riesgos
+Es necesario registrar los resultados del análisis del riesgo en el plan del proyecto, junto con un análisis de consecuencias. Esto ayuda a prepararse para enfrentar los problemas sin que estos conduzcan a un presupuesto inaceptable o a retrasos en el calendario.
+
+Es indispensable diseñar planes de contingencia de manera que, si ocurren los riesgos, se puedan tomar acciones inmediatas de recuperación.
+
+### Proceso de Gestión de Riesgo
+1. **Identificación del Riesgo**: Identificar posibles riesgos para el proyecto, el producto y la empresa.
+2. **Análisis de Riesgos**: Valorar la probabilidad y las consecuencias de los riesgos identificados.
+3. **Planeación del Riesgo**: Elaborar estrategias para enfrentar, evitar o minimizar sus efectos en el proyecto.
+4. **Monitorización del Riesgo**: Revisar regularmente el riesgo y los planes para mitigarlo.
+
+#### Tipos de Riesgos Identificables
+En la primera etapa del proceso de gestión del riesgo se identifican los riesgos que pudieran plantear una mayor amenaza al proceso de ingeniería de software, al software a desarrollar, o a la organización que lo desarrolla.
+
+- **Riesgos Tecnológicos**: Derivados de las tecnologías utilizadas en el proyecto.
+- **Riesgos Personales**: Asociados con las personas del equipo de desarrollo.
+- **Riesgos Organizacionales**: Relacionados con el entorno donde se desarrolla el software.
+- **Riesgos de Herramientas**: Resultan de las herramientas de software usadas en el proyecto.
+- **Riesgos de Requerimientos**: Cambios imprevistos en los requerimientos del cliente.
+- **Riesgos de Estimación**: Estimaciones incorrectas de los recursos necesarios para el proyecto.
+
+### Indicadores de Riesgo
+Durante el proceso de análisis de riesgos, hay que considerar cada riesgo identificado y realizar un juicio acerca de la probabilidad y gravedad de dicho riesgo.
+
+- **Tecnológico**: Retrasos en la entrega de hardware o software, problemas tecnológicos frecuentes.
+- **Personal**: Baja moral, malas relaciones entre miembros, alta rotación de personal.
+- **Organizacional**: Chismes en la organización, falta de acción de los altos ejecutivos.
+- **Herramientas**: Reticencia a usar herramientas, quejas sobre las herramientas CASE.
+- **Requerimientos**: Muchas peticiones de cambio, quejas de los clientes.
+- **Estimación**: Fallos en cumplir con el calendario, incapacidad para corregir defectos a tiempo.
+
+No es posible hacer valoraciones precisas y numéricas de la probabilidad y gravedad de cada riesgo. Sin embargo, se puede clasificar el riesgo en varias bandas:
+
+1. **Probabilidad del Riesgo**:
+   - Muy baja (< 10%)
+   - Baja (10% - 25%)
+   - Moderada (25% - 50%)
+   - Alta (50% - 75%)
+   - Muy alta (> 75%)
+
+2. **Efectos del Riesgo**:
+   - Catastróficos (amenazan la supervivencia del proyecto)
+   - Graves (causarían grandes demoras)
+   - Tolerables (demoras dentro de la contingencia permitida)
+   - Insignificantes
+
+### Ejemplos de Análisis de Riesgos
+- Problemas financieros de la organización que fuerzan reducciones en el presupuesto del proyecto: **Probabilidad Baja**, **Efectos Catastróficos**.
+- Imposibilidad de reclutar personal con las habilidades requeridas: **Probabilidad Alta**, **Efectos Catastróficos**.
+- El personal clave está enfermo e indispuesto en momentos críticos: **Probabilidad Moderada**, **Efectos Graves**.
+- Las herramientas de software no pueden trabajar de manera integrada: **Probabilidad Alta**, **Efectos Tolerables**.
+- El código elaborado por las herramientas de generación de código de software es ineficiente: **Probabilidad Moderada**, **Efectos Insignificantes**.
+
+## Planificación de Riesgos
+Para cada uno de los riesgos, se deben considerar acciones para minimizar la perturbación del proyecto si se materializa el riesgo identificado.
+
+### Estrategias para Gestionar el Riesgo
+1. **Estrategias de Evitación**: Reducir la probabilidad de que surja el riesgo.
+   - Ejemplo: Enfrentar los componentes defectuosos.
+2. **Estrategias de Minimización**: Reducir el efecto del riesgo.
+   - Ejemplo: Estrategia para las enfermedades del personal.
+3. **Planes de Contingencia**: Prepararse para lo peor con estrategias para hacer frente al riesgo.
+   - Ejemplo: Estrategia para los problemas financieros de la organización.
+
+### Indicadores de Riesgo
+- **Tecnológico**: Entrega tardía de hardware o software, muchos problemas tecnológicos reportados.
+- **Personal**: Baja moral del personal, malas relaciones entre miembros, alta rotación.
+- **Organizacional**: Chismes en la organización, falta de acción de los altos ejecutivos.
+- **Herramientas**: Reticencia a usar herramientas, quejas sobre las herramientas CASE, demandas por estaciones de trabajo mejor equipadas.
+- **Requerimientos**: Muchas peticiones de cambio, quejas de los clientes.
+- **Estimación**: Fallos para cumplir con el calendario, incapacidad para corregir defectos a tiempo.
+
+## Monitorización de Riesgos
+La monitorización del riesgo es el proceso de verificar que no han cambiado las suposiciones sobre los riesgos del producto, el proceso y la empresa. Los riesgos deben monitorizarse comúnmente en todas las etapas del proyecto. En cada revisión administrativa, es necesario reflexionar y estudiar cada uno de los riesgos clave por separado.
