--- a/4º Año/Metodologia de Sistemas II/Unidad 5/1. Patrones de proceso.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 5/1. Patrones de proceso.md
@@ -1,28 +1,41 @@
-### Introducción
+## Introducción
 
-Patrón de diseño: Son soluciones **bien pensadas** a **problemas conocidos** en el desarrollo de software.
+Un **patrón de diseño** es una solución **bien pensada** a un **problema conocido** en el desarrollo de software. Para que una solución sea considerada un patrón, debe cumplir con ciertas características:
 
-Para que una solución sea considerada un patrón debe poseer ciertas características:
+- **Efectivo**: Debe haber resuelto problemas similares en ocasiones anteriores.
+- **Reutilizable**: Debe ser aplicable a diferentes problemas de diseño en distintas circunstancias.
 
-- **Efectivo** resolviendo problemas similares en ocasiones anteriores. 
-- **Reutilizable**: aplicable a diferentes problemas de diseño en distintas circunstancias.
+### ¿Cuándo debo usar patrones?
 
-#### ¿Cuándo debo usar patrones?
-El uso de patrones es aconsejable en el caso de tener el mismo problema o similar que soluciona el patrón.
+El uso de patrones es aconsejable cuando se enfrenta un problema que es igual o similar al que el patrón soluciona. Los patrones no son recetas mágicas, sino herramientas que, cuando se utilizan correctamente, pueden mejorar la calidad y la eficiencia del desarrollo de software.
 
-### Patrones del proceso
-Un patrón de proceso ofrece una plantilla: un método consistente para describir una característica importante del proceso de software. Se definen en cualquier grado de abstracción (un proceso completo o una actividad del marco de trabajo importante o una tarea dentro de una actividad del marco de trabajo).
+## Patrones del Proceso
+
+Los **patrones de proceso** son plantillas que ofrecen un método consistente para describir características importantes del proceso de software. Estos patrones pueden definirse en cualquier grado de abstracción, desde un proceso completo hasta una tarea específica dentro de una actividad del marco de trabajo.
+
+### Tipos de Patrones de Proceso
+
+Existen varios tipos de patrones de proceso, que se utilizan según la naturaleza y la escala del problema:
+
 ![[tipos_patrones.png]]
 
-### Plantilla para describir un patrón de proceso
+## Plantilla para describir un patrón de proceso
+
+Para documentar un patrón de proceso, se sigue una plantilla estructurada que ayuda a capturar toda la información relevante. Esta plantilla incluye los siguientes elementos:
+
 ![[plantilla_patron_proceso.png]]
 
-### Tecnología del Proceso
+## Tecnología del Proceso
 
-**Herramientas de tecnología del proceso:**
-- Permiten que una organización de software construya un modelo automatizado del marco de trabajo común del proceso, tareas y actividades.
-- Puede aprovecharse para coordinar el uso de las herramientas de ingeniería de software asistida por computadora.
+Las **herramientas de tecnología del proceso** permiten que una organización de software construya un modelo automatizado del marco de trabajo común del proceso, incluyendo tareas y actividades. Estas herramientas pueden aprovecharse para coordinar el uso de otras herramientas de ingeniería de software asistida por computadora (CASE).
+
+Las herramientas de tecnología de proceso ayudan a:
+
 ![[herramientas_tecnologia_proceso.png]]
 
-### Elementos de la Notación para el Modelado de Procesos de Gestión
+## Elementos de la Notación para el Modelado de Procesos de Gestión (BPMN)
+
+El **Business Process Modeling and Notation (BPMN)** es un estándar para la notación gráfica que se utiliza para especificar procesos empresariales en un modelo de procesos de negocio. Este estándar ayuda a las organizaciones a visualizar sus procesos de gestión de una manera clara y coherente, facilitando así la comprensión y el análisis.
+
 ![[modelado_proceso_gestion.png]]
+Este conjunto de patrones, plantillas y herramientas tecnológicas forma una base sólida para la mejora y gestión de procesos dentro de una organización de software, permitiendo así una mayor eficiencia y calidad en el desarrollo de software.
